# epub_convert

./: README.md  convert-t2s.py  pyproject.toml
epub_convert/: s2t.py  t2s.py
