[project]
name = "epub-convert"
version = "0.1.1"
description = "Convert EPUB files between Simplified Chinese and Traditional Chinese."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "opencc>=1.1.9",
]

[project.scripts]
epub-s2t = "epub_convert.s2t:main"
epub-t2s = "epub_convert.t2s:main"
